# devsecops

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bootstrap.sh  dev.sh  docker-compose.override.yml  docker-compose.yml  help.sh  pytest.toml
.claude/commands/: argocd-status.md  docker-build.md  kind-down.md  kind-up.md  logs.md  test-all.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
ansible/: dev-setup.yml  kind-down.yml  kind-up.yml  requirements.yml
argocd/: application.yaml
docs/: api-reference.md  ci-cd.md  developer-guide.md  port-mappings.md  project-structure.md  tech-stack.md
helm/task-manager/: values.yaml
helm/task-manager/templates/: _helpers.tpl  api-service.yaml  ingest-deployment.yaml
ops/: bootstrap.sh  help.sh  setup.sh
ops/ansible/: dev-setup.yml  kind-config.yaml  kind-down.yml  kind-up.yml  requirements.yml
ops/argocd/: application.yaml
ops/config/: .trivyignore  hadolint.yaml
ops/helm/task-manager/: Chart.yaml  values.yaml
ops/helm/task-manager/templates/: api-deployment.yaml  api-service.yaml  configmap.yaml  fetch-deployment.yaml  fetch-service.yaml  ingest-deployment.yaml
ops/infra/db/: init.sql
ops/scripts/: check-mode1.sh  check-running.sh  check-setup.sh  pyproject_deps.py  scan-dev.sh  scan-host.sh
scripts/: check-running.sh  check-setup.sh
services/api/: Dockerfile  pyproject.toml
services/api/src/: main.py
services/api/src/api/: main.py
services/api/src/api/clients/: fetch.py
services/api/src/api/kafka/: producer.py
services/api/src/api/routers/: tasks.py
services/api/src/models/: task.py
services/api/src/routers/: tasks.py
services/api/tests/: conftest.py  test_tasks.py
services/fetch/: Dockerfile  pyproject.toml
services/fetch/src/fetch/: main.py
services/fetch/src/fetch/db/: repository.py
services/fetch/src/fetch/models/: task.py
services/fetch/src/fetch/routers/: tasks.py
services/fetch/tests/: conftest.py  test_tasks.py
services/ingest/: Dockerfile  pyproject.toml
services/ingest/src/: handlers.py
services/ingest/src/db/: repository.py
services/ingest/src/ingest/: consumer.py  main.py
services/ingest/src/ingest/db/: repository.py
services/ingest/tests/: conftest.py  test_handlers.py
