[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.29.0",
    "aiokafka==0.11.0",
    "httpx==0.27.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "bandit==1.7.9",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
