[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "asyncpg==0.29.0",
    "pydantic==2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fetch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
