[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiokafka==0.11.0",
    "asyncpg==0.29.0",
    "pydantic==2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "bandit==1.7.9",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingest*"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
